# gdnlib_cmake

./: .gitignore  CMakeLists.txt  README.md
dgnlib/: CMakeLists.txt  cpl_config.h.in
dgnlib/cpl/: cpl_config.h  cpl_string.cpp  cpl_string.h
